# codon-cli

./: .gitignore  README.md  pyproject.toml  saop_cli_setup.sh
legal-agent/: .env  agent_config.py
saop/: cli.py
saop/templates/base_agent/: .env  a2a_client.py  a2a_server.py  agent_config.py  agent_template.yaml  app.py  backend_files_compiled.txt  banner.py  compile_be_files.sh  docker-compose.yaml  graph.py  langgraph_executor.py  langgraph_tool_wrapper.py  mcp_client.py  mcp_server.py  mcp_tools_registry.py  otel-collector-config.yaml  prometheus.yml  remote.py
saop/templates/base_agent/_mcp/: mcp_client.py  mcp_server.py  mcp_tool_defs.py  mcp_tools_registry.py  tools.py
saop/templates/base_agent/agent2agent/: a2a_agent_card.yaml  a2a_card_config.py  a2a_card_generator.py  a2a_client.py  a2a_client_streaming.py  a2a_server.py  a2a_tasks.py  a2a_utils.py
saop/templates/base_agent/api/: _agent_routes.py  _auth_routes.py  _streaming_routes.py  _web_routes.py  auth.py  middleware.py  router.py  routes.py  runt.sh  streaming.py  test.py  wrapper.py
saop/templates/base_agent/config/: agent_config.py  agent_model.py  llms.py  nodes.py  openrouter_pricing_converted.json  pol.py  roles.py  tools.py  utils.py  vars.py
saop/templates/base_agent/langgraph/: agent_factory.py  agent_factory_logger.py  langchain_chains.py  langgraph_agent.py  langgraph_executor.py
saop/templates/base_agent/telemetry/: _telemetry.py  langgraph_trace_utils.py  mcp_trace_utils.py
saop/templates/base_agent/tests/: a2a_server_test.py  api_test.py  debug_routes.py  fastapi_test.py  (+8 more)
(+9 files in other folders)
